# sportshub-scraper

./: .env  Cargo.toml  LICENSE  README.md  rustfmt.toml  sports.db
.github/workflows/: rust.yml
benches/: browser.rs  db.rs
chrome-ext/adblock/: CHANGELOG.txt  abp-background.js  adblock-options-filters.html  adblock-options-filters.js  adblock-options-general.html  adblock-options-general.js  manifest.json
chrome-ext/adblock/_locales/en_US/: messages.json
chrome-ext/adblock/_locales/sv/: messages.json
chrome-ext/adblock/_metadata/: verified_contents.json
chrome-ext/adblock/data/rules/: index.json
migrations/2023-09-16-190301_create_streams/: down.sql  up.sql
src/: date_parser.rs  db.rs  lib.rs  main.rs  models.rs  query_selectors.rs  schema.rs  scrape.rs  scrape_utils.rs  web_server_utils.rs
src/constants/: mod.rs  sports.rs
src/db/: helpers.rs  mod.rs  models.rs  schema.rs
src/html/: index.html
tests/: test_db.rs
tests/common/: mod.rs
