[package]
name = "scraper"
version = "0.1.0"
edition = "2021"


[dependencies]
headless_chrome = "1.0.5"
tl = "0.7.8"
diesel = { version = "2.1.1", features = ["sqlite"] }
anyhow = "1.0.79"
juniper = "0.15.12"
urlencoding = "2.1.3"

axum = { version = "0.7.4", features = [] }
tokio = { version = "1.35.1", features = ["full"] }


