[package]
name = "scraper"
version = "0.2.0"
edition = "2021"


[dependencies]
headless_chrome = "1.0.5"
tl = "0.7.8"
anyhow = "1.0.79"
juniper = "0.15.12"
urlencoding = "2.1.3"

axum = { version = "0.7.4", features = ["json"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "full"] }
serde = { version = "1.0.196", features = ["derive"] }
clap = { version = "4.4.18", features = ["derive"] }

diesel = { version = "2.1.1", features = ["sqlite"] }
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "db"
harness = false

[[bench]]
name = "browser"
harness = false
