[package]
name = "scraper"
version = "0.3.0"
edition = "2021"


[dependencies]
headless_chrome = {version = "1.0.9",  features = ["fetch"]}
tl = "0.7.8"
anyhow = "1.0.79"
juniper = "0.15.12"
urlencoding = "2.1.3"

tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "*" }
clap = { version = "4.4.18", features = ["derive"] }

diesel = { version = "2.1.4", features = ["sqlite", "chrono"] }
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
rocket = { version = "0.5.0", features = ["serde_json", "json"] }
thiserror = "1.0.56"
chrono = "0.4.33"
failure = "0.1.8"
indicatif = "0.17.7"





[profile.release]
strip = true
opt-level = "z"
lto = true
